sentinel_config/spec/test-fixtures/latest/overrides/v2_module_import_with_no_primary.txtar
-- sentinel.hcl --
-- sentinel_override.hcl --


import "module" "module1" {
  source = "override.sentinel"
}
  
-- astOut.json --
{
  "_t": "File",
  "_p": {
    "globals": {},
    "imports": {},
    "mocks": {},
    "params": {},
    "policies": {},
    "sentineloptions": null,
    "test": null
  }
}
-- diagOut.txt --
ERROR: There is no module import named "module1". An override file can only override a module import that was already declared in a primary configuration file.:sentinel_override.hcl:2,0->2,25
